# led_matrix_de1_soc

ethernet/: CMakeLists.txt  ethernet.h  fpga_ctrl.h  make_and_copy_to_hps  print_size
matrix_drv/: Makefile  copy_to_hps  matrix_ctrl_fops.c  matrix_data_fops.c  matrix_dma.c  matrix_dma.h  matrix_main.c  matrix_main.h  matrix_regs.c  matrix_regs.h  path_to_compiler
matrix_fpga/: .gitignore  DE1_SOC.v  avalon_regfile.v  dma_from_sdram.v  matrix.v  memory_mux.v  memory_mux.v.bak  tftp
matrix_host/: CMakeLists.txt  buffer.txt  main.cpp  mem_one_frame.cpp  mem_one_frame.h
matrix_hps/: ethernet.c  ethernet.h  fpga_ctrl.h  main.c  test_buffer.c  test_buffer.h
